Adjusted scrollbar, modified playlist pictures, fixed playlist / album selection bug

--- a/react-app/src/components/Deprecated/Playlists/Playlist.css
+++ b/react-app/src/components/Deprecated/Playlists/Playlist.css
@@ -1,4 +1,4 @@
-.playlist-container {
+/* .playlist-container {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -18,4 +18,4 @@
 .link-no-underline {
     text-decoration: none;
     color: white
-}
+} */
